Cleaned up docker related things